registro sesiones final

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,20 @@
 </head>
 
 <body>
-    <h1>Pagina de inicio</h1>
-    <h2>El usuario conectado es: <% = user %></h2>
+    <h1>Página de inicio</h1>
+    <h2>Bienvenido
+        <% if (login) {%>
+            <p>El usuario conectado es: <%=user %>
+            </p>
+            <a href="/logout" class="a-logout">Cerrar sesión</a>
+            <% }else { %>
+                <p>
+                    <%= user %>
+                </p>
+                <a href="/login" class="a-login">Iniciar sesión </a>
+
+                <% } %>
+    </h2>
 </body>
 
 </html>
