--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,36 +10,34 @@
 
 <body>
     <div class="register-form">
-        <h1>Formulario de registro</h1>
-        <form action="/register" method="post">
-            <label for="user">Usuario</label>
-            <input type="text" name="user" required tabindex="1" autofocus>
+        <h1>Registro</h1>
+        <form action="/register" method="POST">
+            <label for="user">Usuario: </label>
+            <input type="text" name="user" placeholder="Ingrese su usuario" required>
 
-            <label for="user">Nombre</label>
-            <input type="text" name="name" required tabindex="2">
+            <label for="name">Nombre: </label>
+            <input type="text" name="name" placeholder="Ingrese su nombre" required>
 
-            <label for="rol">Rol</label>
-            <select id="rol" name="rol" class="select-css" tabindex="3">
-                <option value="admin" selected>Administrador</option>
+            <label for="rol">Rol:</label>
+            <select name="rol">
+                <option value="admin">Administrador</option>
                 <option value="user">Usuario</option>
             </select>
+
             <br>
-            <label for="pass">Contraseña</label>
-            <input type="password" name="pass" required tabindex="4">
-            
+            <label for="pass">Contraseña: </label>
+            <input type="password" name="pass" placeholder="Ingrese su contraseña" required>
+
             <div class="inline">
-                <a href="/" class="btn-cancel">Cancelar</a><input type="submit" class="btn-save" value="guardar">
+                <a href="/" class="btn-cancel">Cancelar</a><input type="submit" class="btn-save" value="Guardar">
             </div>
         </form>
     </div>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-    
-    <!-- si nuestro alert es diferente de undefined -->
-    <% if (typeof alert !== "undefined" ) { %>
-        <!-- Código script de Sweet Alert 2 donde asignamos la información que le hemos pasado en el objeto
-        Muestra el mensaje durante un 1.5s y redirige a la ruta principal-->
-        <script>	
+
+    <% if (typeof alert !=='undefined' ) { %>
+        <script>
             Swal.fire({
                 title: '<%= alertTitle %>',
                 text: '<%= alertMessage %>',
@@ -51,6 +49,7 @@
                 })
         </script>
         <% } %>
+
 </body>
 
 </html>
