--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,11 +11,11 @@
 <body>
     <div class="container">
         <div class="logo-section">
-            <img src="/resources/img/LOGO.png" alt="Festival de la Calle Cordova Logo">
+            <img src="/resources/img/LOGO pequeño.png" alt="Festival de la Calle Cordova Logo">
             <h1></h1>
             <h2></h2>
             <h3></h3>
-            <p>FERIA INTERCULTURAL Y GASTRONÓMICA PORTEÑA</p>
+            <p></p>
         </div>
 
         <div class="form-section">
