--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,11 +11,7 @@
 <body>
     <div class="container">
         <div class="logo-section">
-            <img src="/resources/img/logo.png" alt="Festival de la Calle Cordova Logo">
-            <h1>FESTIVAL</h1>
-            <h2>DE LA CALLE</h2>
-            <h3>CORDOVA</h3>
-            <p>FERIA INTERCULTURAL Y GASTRONÓMICA PORTEÑA</p>
+            <img src="/resources/img/LOGO pequeño.png" alt="Festival de la Calle Cordova Logo">
         </div>
 
         <div class="form-section">
@@ -29,6 +25,7 @@
                         <input type="password" name="pass" placeholder="Contraseña" required>
                     </div>
                     <button type="submit" class="btn-login">Login</button>
+                    
                 </form>
                 <a href="/registro" class="btn-register"> Registrarse</a>
             </div>
